--- a/package.json
+++ b/package.json
@@ -21,11 +21,11 @@
     "reka-ui": "^2.8.0",
     "tailwind-merge": "^3.4.0",
     "tailwindcss": "^4.1.18",
-    "vue": "^3.5.24"
+    "vue": "^3.5.24",
+    "vue-router": "^5.0.2"
   },
   "devDependencies": {
     "@iconify-json/radix-icons": "^1.2.6",
-    "@iconify/vue": "^5.0.0",
     "@types/node": "^24.10.1",
     "@vitejs/plugin-vue": "^6.0.1",
     "@vue/tsconfig": "^0.8.1",
