--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "lint": "oxlint",
     "lint:fix": "oxlint --fix",
     "fmt": "oxfmt",
-    "fmt:check": "oxfmt --check"
+    "fmt:check": "oxfmt --check",
+    "lint:lint-staged": "run-p lint:fix fmt"
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.18",
@@ -29,6 +30,7 @@
     "@types/node": "^24.10.1",
     "@vitejs/plugin-vue": "^6.0.1",
     "@vue/tsconfig": "^0.8.1",
+    "npm-run-all2": "^8.0.4",
     "oxfmt": "^0.27.0",
     "oxlint": "^1.42.0",
     "tw-animate-css": "^1.4.0",
