--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "type": "module",
   "scripts": {
+    "prepare": "git config core.hooksPath .git-hooks || echo 'Not in a git repo'",
     "dev": "vite",
     "build": "vue-tsc -b && vite build",
     "preview": "vite preview",
